<resources>
    <string name="app_name">Hello</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_title_fragment">Hello blank fragment</string>
    <string name="get_ready_to">Get ready to</string>
    <string name="guess_the_word">Guess the Word!</string>
    <string name="play">Play</string>
    <string name="txt_word_is">The Word is</string>
    <string name="txt_skip">Skip</string>
    <string name="txt_gotit">Got it</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="game_finished_text">Game Finished</string>
    <string name="hello_score_fragment">Score FRagment</string>
    <string name="txt_your_score">Your Score is</string>
    <string name="score_showing_methods_info">We will show the score in 3 approaches.\n 1, Legacy approach passing the arguments to the fragment and let the fragment set the value directy to the tetview.
    \n 2, We will use a setter method in Viewmodel and pass the value to that from fragment and observe the value.
        \n 3, Using the constructor in Viewmodel by using the viewmodel factory.
    </string>
    <string name="first_approach">First approach:</string>
    <string name="second_approach">Second Approach:</string>
    <string name="third_approach">Third Approach:</string>
</resources>
