<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/titleFragRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    >

    <TextView
        android:id="@+id/txtGetReady"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_ready_to"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_between_views"
        android:text="@string/guess_the_word"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/txt_header"
        android:textStyle="bold"



        app:layout_constraintTop_toBottomOf="@+id/txtGetReady"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

         />


    <Button
        android:id="@+id/btnPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_between_views"
        android:text="@string/play"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        />


</androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



</layout>