<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/gameFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".game.GameFragment">


        <TextView
            android:id="@+id/txtWordis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_word_is"

            app:layout_constraintBottom_toTopOf="@id/txtGuessWord"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_chainStyle="packed"/>

        <TextView
            android:id="@+id/txtGuessWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/margin_top_between_views"

            android:textSize="@dimen/txt_header"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/txtScore"
            app:layout_constraintTop_toBottomOf="@+id/txtWordis"
            app:layout_constraintVertical_chainStyle="packed"/>

        <TextView
            android:id="@+id/txtScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00000"
            android:layout_marginTop="@dimen/margin_top_between_views"


            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintHorizontal_bias=".5"/>


        <Button
            android:id="@+id/btnPrevios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_skip"
            android:layout_marginBottom="@dimen/margin_bottom_between_views"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintEnd_toStartOf="@+id/btnGotIt"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintHorizontal_bias=".3"

            />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="96dp" />
        <Button
            android:id="@+id/btnGotIt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_gotit"
            android:layout_marginBottom="@dimen/margin_bottom_between_views"

            app:layout_constraintStart_toEndOf="@+id/btnPrevios"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>